--- a/public/css/mobile_style.css
+++ b/public/css/mobile_style.css
@@ -8,6 +8,10 @@ body {
     margin: auto;
 }
 
+#banniere{
+    width: 100%;
+}
+
 .gallery_thumbnail{
     background-color: #ffffff;
     border-radius: 3px;
